style: Fix the stream and user list buttons on mobile in night mode.
These buttons are displayed with a lighter background than other
buttons. Update their borders and background colors (along with the
border on the search box) so that they match the night theme.

Fix #10301.

--- a/static/styles/night_mode.scss
+++ b/static/styles/night_mode.scss
@@ -236,6 +236,17 @@ on a dark background, and don't change the dark labels dark either. */
         color: hsl(0, 0%, 100%);
     }
 
+    #streamlist-toggle,
+    #userlist-toggle {
+        border-color: hsla(199, 33%, 46%, 0.2);
+    }
+
+    #streamlist-toggle-button,
+    #userlist-toggle-button {
+        color: inherit;
+        background-color: inherit;
+    }
+
     li.active-filter,
     li.active-sub-filter {
         background-color: hsla(199, 33%, 46%, 0.2);
@@ -266,6 +277,7 @@ on a dark background, and don't change the dark labels dark either. */
     }
 
     #searchbox,
+    #searchbox_legacy,
     .drafts-header,
     .nav > li > a:hover,
     .subscriptions-header,
